--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,18 @@ a {
   border-radius: 30px;
   transition: 1s;
   text-align: center;
+  font-size: 14px;
+}
+
+.icon-center {
+  max-width: 20px;
+  max-height: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem; /* ajuste si besoin */
 }
 
 
